hard-gists/38f7f1f3b07c77a9c537/run.log
=== Docker Run Log for 38f7f1f3b07c77a9c537 ===
Started at: Mi 29. Okt 14:05:26 CET 2025

[2025-10-29 14:05:27] START: Running container for 38f7f1f3b07c77a9c537
[2025-10-29 14:05:27] SUCCESS: Container 7985421cee0aefa2ac0bda46bfde2930ffb5c33b993c231eb2fc1cd763d7a41c started for 38f7f1f3b07c77a9c537
=== Container logs for 38f7f1f3b07c77a9c537 ===
  File "/snippet.py", line 23
    print links[0].get('href')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 38f7f1f3b07c77a9c537 ===
[2025-10-29 14:05:29] INFO: Container 7985421cee0aefa2ac0bda46bfde2930ffb5c33b993c231eb2fc1cd763d7a41c has stopped
